--- a/packages/styles/src/_engrid-errors.scss
+++ b/packages/styles/src/_engrid-errors.scss
@@ -117,12 +117,12 @@ body.error-jump-assist .en__component .en__field__error {
 .en__component
   .en__field.en__field--rating.en__field--validationFailed
   .en__field__element {
-  border: var(--error__border-width) solid var(--error__color);
-  background-color: var(--error__color_faded);
+  // border: var(--error__border-width) solid var(--error__color);
+  // background-color: var(--error__color_faded);
   // padding-top: 0.5rem;
-  margin-left: 0rem;
-  margin-right: 0rem;
-  border-radius: var(--input_border-radius);
+  // margin-left: 0rem;
+  // margin-right: 0rem;
+  // border-radius: var(--input_border-radius);
 }
 
 .en__field--text.en__field--validationFailed .en__field__error,
@@ -152,8 +152,8 @@ body.error-jump-assist .en__component .en__field__error {
 .en__component
   .en__field.en__field--tripleselect.en__field--validationFailed
   .en__field__error {
-  border-top-right-radius: 0px;
-  border-top-left-radius: 0px;
+  // border-top-right-radius: 0px;
+  // border-top-left-radius: 0px;
 }
 
 .en__field--radio.en__field--validationFailed
