--- a/packages/styles/src/_engrid-fancy-errors.scss
+++ b/packages/styles/src/_engrid-fancy-errors.scss
@@ -6,31 +6,32 @@
 
 [data-engrid-errors="fancy"] {
 
+  .en__component--formblock .en__field.en__field--validationFailed,
+  .en__component--svblock .en__field.en__field--validationFailed{
+    margin-bottom: calc(var(--fields_spacing-block) * 2);
+  }
+
   .en__field__error {
     padding: 0.25rem 0.5rem;
     color: var(--color_white);
     font-size: calc(max(75%, 10px)); // Do not let the font size fall below 10px
-    border-bottom-left-radius: var(--input_border-radius);
-    border-bottom-right-radius: var(--input_border-radius);
+    border-radius: var(--input_border-radius);
     background-color: var(--error__color);
     order: 3;
   }
 
-  .en__field--text.en__field--validationFailed input,
-  .en__field--email.en__field--validationFailed input,
-  .en__field--telephone.en__field--validationFailed input,
-  .en__field--number.en__field--validationFailed input,
-  .en__field--textarea.en__field--validationFailed textarea,
-  .en__field--select.en__field--validationFailed select,
-  .en__field--password.en__field--validationFailed input,
-  .en__field--calendar.en__field--validationFailed input{
-    border-bottom-right-radius: 0px;
-    border-bottom-left-radius: 0px;
-
-    &:only-of-type{
-      margin-bottom: 0 !important;
-    }
-  }
+  // .en__field--text.en__field--validationFailed input,
+  // .en__field--email.en__field--validationFailed input,
+  // .en__field--telephone.en__field--validationFailed input,
+  // .en__field--number.en__field--validationFailed input,
+  // .en__field--textarea.en__field--validationFailed textarea,
+  // .en__field--select.en__field--validationFailed select,
+  // .en__field--password.en__field--validationFailed input,
+  // .en__field--calendar.en__field--validationFailed input{
+  //   &:only-of-type{
+  //     margin-bottom: 0 !important;
+  //   }
+  // }
     
   .en__field--select.en__field--withOther,
   .en__field--radio,
@@ -42,13 +43,6 @@
   .en__field--calendar,
   .en__field--imgselect,
   .en__field--rating{
-
-    &.en__field--validationFailed .en__field__element{
-
-      border-bottom-left-radius: 0rem !important;
-      border-bottom-right-radius: 0rem !important;
-    }
-
     .en__field--validationFailed.has-value{
       border-color: var(--error__color_grayscale);
       background-color: var(--error__color_grayscale);
